still cells are not fix on mobile :/ testingggg

--- a/style/style.css
+++ b/style/style.css
@@ -31,7 +31,7 @@ body {
 #window .cell.parent {
     border: 1px solid #dadada;
     border-radius:7px;
-    box-shadow:0 0 10px #9ecaed;
+    /*box-shadow:0 0 10px #9ecaed;*/
 }
 
 #window .cell:hover {
